--- a/example/windows/ExperimentalFeatures.props
+++ b/example/windows/ExperimentalFeatures.props
@@ -1,38 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-  <!--
-    This file contains some important settings that will apply globally for
-    your app and *all* native modules your app consumes. These values were
-    set when you created the app project, and in some cases cannot be
-    simply changed here without recreating a new project.
-  -->
-
   <PropertyGroup Label="Microsoft.ReactNative Experimental Features">
     <!--
-      Enables default usage of Hermes.
-      
-      See https://microsoft.github.io/react-native-windows/docs/hermes
-    -->
-    <UseHermes>false</UseHermes>
+      Required for building a New Architecture project.
 
-    <!--
-      Changes compilation to assume use of WinUI 3 instead of System XAML.
-      Requires creation of new project.
+      App projects should not change this value.
 
-      See https://microsoft.github.io/react-native-windows/docs/winui3
+      See https://microsoft.github.io/react-native-windows/docs/new-architecture
     -->
-    <UseWinUI3>false</UseWinUI3>
+    <RnwNewArch>true</RnwNewArch>
 
     <!--
       Changes compilation to assume use of Microsoft.ReactNative NuGet packages
-      instead of building the framework from source.
-      Requires creation of new project.
+      instead of building the framework from source. Defaults to true.
+
+      This is set during app project creation and should not be changed.
 
       See https://microsoft.github.io/react-native-windows/docs/nuget
     -->
-    <UseExperimentalNuget>false</UseExperimentalNuget>
-  
+    <UseExperimentalNuget>true</UseExperimentalNuget>
+
+    <ReactExperimentalFeaturesSet>true</ReactExperimentalFeaturesSet>
   </PropertyGroup>
 
 </Project>
