--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "RNDeviceInfo.podspec",
     "babel.config.js",
     "jest.config.js",
-    "jest.setup.ts"
+    "jest.setup.ts",
+    "windows"
   ],
   "repository": {
     "type": "git",
@@ -104,7 +105,6 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^27.4.1",
     "@types/react": "17.0.39",
-    "@types/react-native": "^0.67.2",
     "eslint": "^7",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
@@ -112,13 +112,23 @@
     "lint-staged": "^12.3.4",
     "metro-react-native-babel-preset": "^0.67.0",
     "react": "17.0.2",
-    "react-native": "^0.67.3",
+    "react-native": "^0.77.2",
     "react-native-builder-bob": "^0.18.2",
-    "react-native-windows": "^0.67.3",
+    "react-native-windows": "^0.77.7",
     "react-test-renderer": "^17.0.1",
     "semantic-release": "^19.0.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
+  },
+  "codegenConfig": {
+    "name": "RNDeviceInfo",
+    "type": "modules",
+    "jsSrcsDir": "./src",
+    "windows": {
+      "namespace": "RNDeviceInfoCodegen",
+      "outputDirectory": "windows/RNDeviceInfoCPP/codegen",
+      "separateDataTypes": true
+    }
   },
   "resolutions": {
     "@types/react": "17.0.39"
@@ -134,5 +144,12 @@
       "module",
       "typescript"
     ]
+  },
+  "react-native-windows": {
+    "init-windows": {
+      "name": "RNDeviceInfo",
+      "namespace": "RNDeviceInfo",
+      "template": "cpp-lib"
+    }
   }
 }
