--- a/.github/workflows/jest-test.yml
+++ b/.github/workflows/jest-test.yml
@@ -12,10 +12,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Test using Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v5
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
         with:
-          node-version: 16
+          node-version: "lts/*"
       - run: yarn install
       - run: yarn test
