--- a/.github/workflows/tests_e2e.yml
+++ b/.github/workflows/tests_e2e.yml
@@ -46,14 +46,11 @@ jobs:
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
 
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
         with:
-          fetch-depth: 50
-          submodules: recursive
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 16
+          node-version: "lts/*"
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
