build(ci): set a publishConfig in attempt to fix new publish style
OIDC still rejecting with ENEEDAUTH

--- a/package.json
+++ b/package.json
@@ -135,5 +135,9 @@
         }
       ]
     ]
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
