--- a/.github/workflows/windows-app-test.yml
+++ b/.github/workflows/windows-app-test.yml
@@ -9,6 +9,9 @@ jobs:
   run-windows-tests:
     name: Build & run tests
     runs-on: windows-2019
+    env:
+      # Node 17+ uses OpenSSL 3.0; Metro/RN bundler needs legacy provider for hashing
+      NODE_OPTIONS: --openssl-legacy-provider
 
     steps:
     - uses: actions/checkout@v5
